// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogViewer tests default renderer 1`] = `
<LogViewer
  classes={
    Object {
      "exportButton": "LogViewer-exportButton-4 exportButton",
      "filterSection": "LogViewer-filterSection-3 filterSection",
      "formControl": "LogViewer-formControl-1 formControl",
      "tableContainer": "LogViewer-tableContainer-2 tableContainer",
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  loading={false}
  logs={Array []}
  onClose={[MockFunction]}
  onExportLogs={[MockFunction]}
  onLoadLogs={[MockFunction]}
  pagination={null}
  profiles={Array []}
  userData={Object {}}
/>
`;

exports[`LogViewer tests renders with logs 1`] = `
<LogViewer
  classes={
    Object {
      "exportButton": "LogViewer-exportButton-4 exportButton",
      "filterSection": "LogViewer-filterSection-3 filterSection",
      "formControl": "LogViewer-formControl-1 formControl",
      "tableContainer": "LogViewer-tableContainer-2 tableContainer",
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  loading={false}
  logs={
    Array [
      Object {
        "action_type": "card_click",
        "card_id": 1,
        "card_title": "Hello",
        "created_at": "2024-01-01T00:00:00Z",
        "id": 1,
        "metadata": Object {},
        "profile_id": 1,
        "profile_name": "Test Profile",
      },
    ]
  }
  onClose={[MockFunction]}
  onExportLogs={[MockFunction]}
  onLoadLogs={[MockFunction]}
  pagination={
    Object {
      "limit": 100,
      "page": 1,
      "total": 1,
    }
  }
  profiles={Array []}
  userData={Object {}}
/>
`;

exports[`LogViewer tests renders with profiles 1`] = `
<LogViewer
  classes={
    Object {
      "exportButton": "LogViewer-exportButton-4 exportButton",
      "filterSection": "LogViewer-filterSection-3 filterSection",
      "formControl": "LogViewer-formControl-1 formControl",
      "tableContainer": "LogViewer-tableContainer-2 tableContainer",
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  loading={false}
  logs={Array []}
  onClose={[MockFunction]}
  onExportLogs={[MockFunction]}
  onLoadLogs={[MockFunction]}
  pagination={null}
  profiles={
    Array [
      Object {
        "id": 1,
        "name": "Profile 1",
      },
      Object {
        "id": 2,
        "name": "Profile 2",
      },
    ]
  }
  userData={Object {}}
/>
`;
